    over a Debian swirl.
  * [Roland] deb-specific/install-ldap.sh: Test for the existence of
    /etc/ldap/slapd.conf before trying to modify it, and suggest to
    reconfigure slapd if it is not present.
  * [Roland] [From 2.5] Ported the new LDAP schema, that had been
    forgotten for some reason.
  * [Roland] [From 2.5] Fixed email addresses on the users' home page.

 --

sourceforge (2.6-0+3) unstable; urgency=low

  * [Christian] Added proper chmod for cp -r www and common
  * [Christian] Added homedir_prefix and groupdir_prefix in
    local.inc.template and made the change in account.php to take this in
    account
  * [Roland] [From 2.5] Rewrote the config file handling, so that it does
    not overwrite local changes.
  * [Roland] [From 2.5] Added cvssh.pl.

 -- Christian Bayle <bayle@aist.enst.fr>  Mon,  3 Dec 2001 20:09:39 +0100

sourceforge (2.6-0+2) unstable; urgency=low

  * [Christian] Patch for db init
  * [Christian] Repared bad db init 

 -- Christian Bayle <bayle@aist.enst.fr>  Sat, 17 Nov 2001 01:29:25 +0100

sourceforge (2.6-0+1) unstable; urgency=low

  * Started working on 2.6.  Don't expect it to work just yet.
  * Split the DB installation/deinstallation process out of
    postinst/postrm/prerm and into an install-db.sh script.  Made it a bit
    less verbose.
  * Split the Apache installation/deinstallation process out of
    postinst/prerm and into an install-db.sh script.
  * Cleaned the exim configuration a bit.
  * Cleaned the DNS configuration a bit.
  * Cleaned the install-*.sh scripts a lot.  They now all look the same,
    are more readable (well, they are more readable to me), and work
    approximately the same way.  Added a template for future such scripts
    (install-skel.sh).
  * [Christian] Put utils/include.pl utils/sql2ldif.pl
    utils/underworld-dummy/ssh_dump.pl of 2.5 as 2.6 scripts, sql2ldif
    will probably have to be re-seen
  * [Christian] Added sf-2.6-complete.sql script
  * [Christian] Cleaned debian/rules