@@ -16,8 +16,10 @@ sourceforge (2.6-0+4) unstable; urgency=low
   * [Roland] [From 2.5] Ported the new LDAP schema, that had been
     forgotten for some reason.
   * [Roland] [From 2.5] Fixed email addresses on the users' home page.
+  * [Roland] Added the login name and real name of the user whose
+    permissions in a project are being edited.
 
- --
+ -- Roland Mas <lolando@debian.org>  Fri, 28 Dec 2001 20:03:06 +0100
 
 sourceforge (2.6-0+3) unstable; urgency=low
 
